@@ -1,6 +1,6 @@
 Package: spgwr
-Version: 0.6-7
-Date: 2010-04-03
+Version: 0.6-8
+Date: 2010-05-12
 Title: Geographically weighted regression
 Author: Roger Bivand and Danlin Yu, contributions by Tomoki Nakaya, tricube function based on a contribution by Miquel-Angel Garcia-Lopez
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
